test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/usual_arithmetic_conversions_ptr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(10)
  *
  (
  void
  *
  )
  const int(0)
  ;
  }
